:sparkles: feat: Adicionado menu principal

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="pt_BR">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/menu.css">
   <title>Shooting stars</title>
 </head>
 <body>
-  
+  <main>
+    <h1>
+      Johnny Ventura em:<br>
+      Estrelas cadentes
+    </h1>
+    <menu>
+      <li><a href="">Jogar</a></li>
+      <li><a href="">Minha pontuação</a></li>
+    </menu>
+  </main>
 </body>
 </html>
