:lipstick: feat: Adicionado estilização ao menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="">Jogar</a></li>
       <li><a href="">Minha pontuação</a></li>
     </menu>
+    <p>Imagem do campo ultra profundo do Hubble</p>
   </main>
 </body>
 </html>
