--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Shooting stars</title>
 </head>
 <body>
-  <main>
+  <div id="root">
     <h1>
       Johnny Ventura em:<br>
       Estrelas cadentes
@@ -16,7 +16,21 @@
       <li><a href="">Jogar</a></li>
       <li><a href="">Minha pontuação</a></li>
     </menu>
-    <p>Imagem do campo ultra profundo do Hubble</p>
-  </main>
+    <article class="info-card">
+      <p>
+        Esta imagem de fundo é a fotografia mais longe já tirada em luz visível, é o
+        campo ultra profundo do Hubble, imagem de uma pequena região do espaço
+        onde estima-se que haja 10.000 objetos, a maioria deles galáxias. 
+        <a 
+          href="https://pt.wikipedia.org/wiki/Hubble_Ultra-Deep_Field"
+          target="blank"
+          title="Ver mais sobre no site Wikipedia"
+        >
+          Saiba mais.
+        </a>
+      </p>
+    </article>
+    <p>Estrelas cadentes</p>
+  </div>
 </body>
 </html>
