--- a/index.html
+++ b/index.html
@@ -8,29 +8,34 @@
 </head>
 <body>
   <div id="root">
-    <h1>
-      Johnny Ventura em:<br>
-      Estrelas cadentes
-    </h1>
-    <menu>
-      <li><a href="">Jogar</a></li>
-      <li><a href="">Minha pontuação</a></li>
-    </menu>
-    <article class="info-card">
-      <p>
-        Esta imagem de fundo é a fotografia mais longe já tirada em luz visível, é o
-        campo ultra profundo do Hubble, imagem de uma pequena região do espaço
-        onde estima-se que haja 10.000 objetos, a maioria deles galáxias. 
-        <a 
-          href="https://pt.wikipedia.org/wiki/Hubble_Ultra-Deep_Field"
-          target="blank"
-          title="Ver mais sobre no site Wikipedia"
-        >
-          Saiba mais.
-        </a>
-      </p>
-    </article>
-    <p>Estrelas cadentes</p>
+    <main>
+      <div id="game-title">
+        <h2>Johnny Ventura em:</h2>
+        <h1>Estrelas cadentes</h1>
+      </div>
+      
+      <menu>
+        <li><a href="">Jogar</a></li>
+        <li><a href="">Minha pontuação</a></li>
+      </menu>
+
+      <article class="info-card">
+        <p>
+          Esta imagem de fundo é a fotografia mais longe já tirada em luz visível, é o
+          campo ultra profundo do Hubble, imagem de uma pequena região do espaço
+          onde estima-se que haja 10.000 objetos, a maioria deles galáxias. 
+          <a 
+            href="https://pt.wikipedia.org/wiki/Hubble_Ultra-Deep_Field"
+            target="blank"
+            title="Ver mais sobre no site Wikipedia"
+          >
+            Saiba mais.
+          </a>
+        </p>
+      </article>
+      
+      <p>Estrelas cadentes</p>
+    </main>
   </div>
 </body>
 </html>
