--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <div id="game-title">
         <h2>Johnny Ventura em:</h2>
-        <h1>Estrelas cadentes</h1>
+        <h1>Estrelas cadentes <span>3D</span></h1>
       </div>
       
       <menu>
