:sparkles: feat: Concluído menu principal

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       
       <menu>
-        <li><a href="">Jogar</a></li>
+        <li><a href="html/game.html">Jogar</a></li>
         <li><a href="">Minha pontuação</a></li>
       </menu>
 
