--- a/html/game.html
+++ b/html/game.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_BR">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/game.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="game-area">
+    <!--
+      <img src="../assets/asteroid.png" alt="" id="asteroid1">
+    -->
+  </div>
+
+  <script src="../javascript/game.js"></script>
 </body>
 </html>
