Início do desenvolvimento do nível 1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       
       <menu>
-        <li><a href="html/game.html">Jogar</a></li>
+        <li><a href="level1/level1.html">Jogar</a></li>
         <li><a href="">Minha pontuação</a></li>
       </menu>
 
