--- a/score/score.html
+++ b/score/score.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Minha pontuação</title>
   <link rel="stylesheet" href="../css/game.css">
   <link rel="shortcut icon" href="../assets/star-book.webp" type="image/x-icon">
-  <title>Nível 1</title>
 </head>
 <body>
-
   <div id="game-area">
 
   </div>
-
-  <script src="level1.js"></script>
+  
+  <script src="score.js"></script>
 </body>
 </html>
